--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, height=device-height">
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 <script>
         const googleAnalyticsId = "UA-21027681-5";
         const that = this;
@@ -32,3 +40,6 @@
     })();
 </script>
 <!-- Bizzabo Registration Widget End -->
+</body>
+
+</html>
