--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             a.src = g;
             m.parentNode.insertBefore(a, m);
         }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'));
+        ga('create', googleAnalyticsId, 'auto');
+        ga('send', 'pageview');
 </script>
 
 <button id="ntk">NTK</button>
