--- a/index.html
+++ b/index.html
@@ -7,22 +7,40 @@
 </head>
 <body>
 <script>
-        const googleAnalyticsId = 'UA-137714421-2';
-        const that = this;
-        /* eslint-disable  */
-        (function(i, s, o, g, r, a, m) {
-            i.GoogleAnalyticsObject = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments);
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m);
-        }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'));
-        ga('create', googleAnalyticsId, 'auto');
-        ga('send', 'pageview');
+//         const googleAnalyticsId = 'UA-137714421-2';
+//         const that = this;
+//         /* eslint-disable  */
+//         (function(i, s, o, g, r, a, m) {
+//             i.GoogleAnalyticsObject = r;
+//             i[r] = i[r] || function() {
+//                 (i[r].q = i[r].q || []).push(arguments);
+//             }, i[r].l = 1 * new Date();
+//             a = s.createElement(o),
+//                 m = s.getElementsByTagName(o)[0];
+//             a.async = 1;
+//             a.src = g;
+//             m.parentNode.insertBefore(a, m);
+//         }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'));
+//         ga('create', googleAnalyticsId, 'auto');
+//         ga('send', 'pageview');
+</script>
+<script>
+    <script>
+    const googleTagManagerId = 'GTM-2423434';
+    (function (w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', googleTagManagerId);
+</script>
 </script>
 
 <button id="ntk">NTK</button>
