--- a/agenda.html
+++ b/agenda.html
@@ -1,10 +1,10 @@
 <!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="218495"></div>
+<div name="bizzabo-web-agenda" data-unique-name="4" data-iframe-resizer="false" data-events-url="https://erango-events.ext.dev.bizzabo.com"></div>
 <script type="text/javascript">(function() {
     var bz = document.createElement('script');
     bz.type = 'text/javascript';
     bz.async = true;
-    bz.src = 'https://organizer.bizzabo.com/widgets/agenda/agenda.js';
+    bz.src = 'https://erango-organizer.ext.dev.bizzabo.com/widgets/agenda/agenda.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(bz, s);
 })();</script>
