--- a/agenda.html
+++ b/agenda.html
@@ -1,5 +1,5 @@
 <!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="4" data-iframe-resizer="false" data-events-url="https://erango-events.ext.dev.bizzabo.com"></div>
+<div name="bizzabo-web-agenda" data-unique-name="4" data-iframe-resizer="true" data-events-url="https://erango-events.ext.dev.bizzabo.com"></div>
 <script type="text/javascript">(function() {
     var bz = document.createElement('script');
     bz.type = 'text/javascript';
