--- a/agenda-no-resize.html
+++ b/agenda-no-resize.html
@@ -1,4 +1,4 @@
-<script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+<script src="https://unpkg.com/micromodal/dist/micromodal.min.js">
 <button data-micromodal-trigger="modal-1">View our beautiful agenda
 <!-- [1] -->
 <div id="modal-1" aria-hidden="true">
