--- a/agenda-no-resize.html
+++ b/agenda-no-resize.html
@@ -151,7 +151,7 @@
   will-change: transform;
 }
 </style>
-<button data-micromodal-trigger="modal-1">View our beautiful agenda
+<button data-micromodal-trigger="modal-1">View our beautiful agenda</button>
 <!-- [1] -->
 <div id="modal-1" aria-hidden="true">
 
