--- a/agenda-no-resize.html
+++ b/agenda-no-resize.html
@@ -2,7 +2,14 @@
   /**************************\
   Basic Modal Styles
 \**************************/
+.modal {
+  display: none;
+}
 
+.modal.is-open {
+  display: block;
+}
+  
 .modal {
   font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
 }
