--- a/agenda-no-resize.html
+++ b/agenda-no-resize.html
@@ -43,7 +43,7 @@
   </div>
 </div>
  
-<a data-fancybox="modal-1" href="modal-1">
+<a data-fancybox href="javascript:;">
   <button>View our beautiful agenda</button>
 </a>
 
