--- a/agenda-no-resize.html
+++ b/agenda-no-resize.html
@@ -17,12 +17,9 @@
         <h2 id="modal-1-title">
           Isn't it pretty?
         </h2>
-
-        <!-- [4] -->
-        <button aria-label="Back" data-micromodal-close></button>
       </header>
 
-      <div id="modal-1-content">
+      <div id="modal-1-content" width="600" height="400">
         
         <!-- Bizzabo Web Agenda Begin -->
         <div name="bizzabo-web-agenda" data-unique-name="4" data-iframe-resizer="false" data-events-url="https://erango-events.ext.dev.bizzabo.com"></div>
