--- a/agenda-no-resize.html
+++ b/agenda-no-resize.html
@@ -4,7 +4,7 @@
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
 <style>
-  .fancybox-content { height: 480px; width: 640px; }
+  .fancybox-content { height: 80vh; width: 100vw; }
   .fancybox-content iframe { height: 100%; }
 </style>
 
