--- a/index.html
+++ b/index.html
@@ -6,57 +6,13 @@
     <title>Title</title>
 </head>
 <body>
-<script>
-//         const googleAnalyticsId = 'UA-137714421-2';
-//         const that = this;
-//         /* eslint-disable  */
-//         (function(i, s, o, g, r, a, m) {
-//             i.GoogleAnalyticsObject = r;
-//             i[r] = i[r] || function() {
-//                 (i[r].q = i[r].q || []).push(arguments);
-//             }, i[r].l = 1 * new Date();
-//             a = s.createElement(o),
-//                 m = s.getElementsByTagName(o)[0];
-//             a.async = 1;
-//             a.src = g;
-//             m.parentNode.insertBefore(a, m);
-//         }(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'));
-//         ga('create', googleAnalyticsId, 'auto');
-//         ga('send', 'pageview');
-</script>
-<script>
-    <script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-21027681-13"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-21027681-13');
-</script>
-
-</script>
-</script>
-
-<button id="ntk">NTK</button>
-​<!-- Bizzabo Registration Widget Begin -->
-<script type = "text/javascript"
-        id="bz-popup-registration-script-60b24367-c65f-48f8-bbee-9b96dee0e118"
-        data-event-id="4"
-        data-flow-id="c76f0c3e-41b9-4580-a81b-b8204c91e8e8"
-        data-element-id="ntk"
-        data-element-class="">
-    (function() {
-        var bz = document.createElement("script");
-        bz.type = "text/javascript";
-        bz.async = true;
-        bz.src = "https://erango-organizer.ext.dev.bizzabo.com/widgets/flows/popup/registrationPopup.js";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(bz, s);
-    })();
-</script>
-<!-- Bizzabo Registration Widget End -->
+<!-- Bizzabo Tickets Widget Start -->
+<div class="bizzabo-tickets-widget" data-event-id="3" data-params="isInMinisite=true&widgetId=6"></div>
+<a href="https://www.bizzabo.com?utm_source=tickets_widget&utm_medium=powered_by&utm_campaign=tickets_widget" target="_blank" style="text-align: right; padding-right: 17px; text-decoration: none; width: 100%; display: inline-block; margin-top: 5px; box-sizing: border-box;" class="bizzabo-link-class">Powered by Bizzabo</a>
+<script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://erango-organizer.ext.dev.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
+<!-- Bizzabo Tickets Widget End -->
+    
 </body>
 
 </html>
