--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 
 <!-- Bizzabo Tickets Widget Start -->
-<div class="bizzabo-tickets-widget" data-event-id="3" data-params="isInMinisite=true&widgetId=6"></div>
+<div class="bizzabo-tickets-widget" data-event-id="260227" data-params="isInMinisite=true&widgetId=263057"></div>
 <a href="https://www.bizzabo.com?utm_source=tickets_widget&utm_medium=powered_by&utm_campaign=tickets_widget" target="_blank" style="text-align: right; padding-right: 17px; text-decoration: none; width: 100%; display: inline-block; margin-top: 5px; box-sizing: border-box;" class="bizzabo-link-class">Powered by Bizzabo</a>
-<script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://erango-organizer.ext.dev.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
+<script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://organizer.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
 <!-- Bizzabo Tickets Widget End -->
     
 </body>
