--- a/index.html
+++ b/index.html
@@ -49,5 +49,24 @@
 <script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://organizer.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
 <!-- Bizzabo Tickets Widget End -->
 
+HTML
+<div id="popup" style="
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  z-index: 999; /* Ensure it appears above other content */
+">
+  <!-- Bizzabo Tickets Widget Start -->
+<div class="bizzabo-tickets-widget" data-event-id="8" data-params="isInMinisite=true&widgetId=8"></div>
+<a href="https://www.bizzabo.com?utm_source=tickets_widget&utm_medium=powered_by&utm_campaign=tickets_widget" target="_blank" style="text-align: right; padding-right: 17px; text-decoration: none; width: 100%; display: inline-block; margin-top: 5px; box-sizing: border-box;" class="bizzabo-link-class">Powered by Bizzabo</a>
+<script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://pink-organizer.ext.dev.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
+<!-- Bizzabo Tickets Widget End -->
+</div>
 
 </html>
