--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@ HTML
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px;
+  width: 840px;
   padding: 20px;
   background-color: #fff;
   border: 1px solid #ccc;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-  z-index: 999; /* Ensure it appears above other content */
+  max-height: 90vh;
+  overflow-y: auto
+  z-index: 999;
 ">
   <!-- Bizzabo Tickets Widget Start -->
 <div class="bizzabo-tickets-widget" data-event-id="8" data-params="isInMinisite=true&widgetId=8"></div>
