--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ HTML
   border: 1px solid #ccc;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
   max-height: 90vh;
-  overflow-y: auto
+  overflow-y: auto;
   z-index: 999;
 ">
   <!-- Bizzabo Tickets Widget Start -->
