--- a/agenda.html
+++ b/agenda.html
@@ -1,23 +1,10 @@
 <!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="4" data-events-url="https://erango-events.ext.dev.bizzabo.com"></div>
+<div name="bizzabo-web-agenda" data-unique-name="72" data-internal-website-base-url="https://pink-events.ext.dev.bizzabo.com/72"></div>
 <script type="text/javascript">(function() {
     var bz = document.createElement('script');
     bz.type = 'text/javascript';
     bz.async = true;
-    bz.src = 'https://erango-organizer.ext.dev.bizzabo.com/widgets/agenda/agenda.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(bz, s);
-})();</script>
-<!-- Bizzabo Web Agenda End -->
-<iframe src="https://attendees.bizzabo.com/fix-refresh-token/agenda?date=1734134400000"/>
-
-<!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="fix-refresh-token" data-internal-website-base-url="https://events.bizzabo.com/fix-refresh-token"></div>
-<script type="text/javascript">(function() {
-    var bz = document.createElement('script');
-    bz.type = 'text/javascript';
-    bz.async = true;
-    bz.src = 'https://organizer.bizzabo.com/widgets/agenda/agenda.js';
+    bz.src = 'https://pink-organizer.ext.dev.bizzabo.com/widgets/agenda/agenda.js';
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(bz, s);
 })();</script>
