--- a/agenda.html
+++ b/agenda.html
@@ -1,3 +1,7 @@
+<style>
+    iframe { width: 100%; height: 100%; }
+</style>
+
 <!-- Bizzabo Web Agenda Begin -->
 <div name="bizzabo-web-agenda" data-unique-name="72" data-internal-website-base-url="https://pink-events.ext.dev.bizzabo.com/72"></div>
 <script type="text/javascript">(function() {
