--- a/agenda.html
+++ b/agenda.html
@@ -13,3 +13,6 @@
     s.parentNode.insertBefore(bz, s);
 })();</script>
 <!-- Bizzabo Web Agenda End -->
+
+<a href="https://page.eran.biz.bo/calendars/GOOGLE/accounts/9/events/2?eventGroupId=1">Without internal path</a>
+<a href="https://page.eran.biz.bo/path/calendars/GOOGLE/accounts/9/events/2?eventGroupId=1">With internal path</a>
