--- a/registration.html
+++ b/registration.html
@@ -1,4 +1,4 @@
 <!-- Bizzabo Tickets Widget Start -->
 <div class="bizzabo-tickets-widget" data-event-id="6" data-params="isInMinisite=true&widgetId=8"></div>
-<script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://erango-organizer.ext.dev.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
+<script type="text/javascript">(function(){var bz=document.createElement("script");bz.type="text/javascript";bz.async=true;bz.src="https://pink-organizer.ext.dev.bizzabo.com/widgets/tickets/tickets.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(bz,s);})();</script>
 <!-- Bizzabo Tickets Widget End -->
